nginx-traffic-stats/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-traffic-stats
spec:
  selector:
    app: nginx-traffic-stats
  ports:
  - port: 80
    targetPort: 2112
